--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "default-value": "^1.0.0",
     "express": "^4.16.3",
     "express-promise-router": "^3.0.2",
+    "fluent-ffmpeg": "^2.1.3",
     "gm": "^1.23.1",
     "group-by": "0.0.1",
     "moment": "^2.22.1",
